--- a/scss/email.scss
+++ b/scss/email.scss
@@ -19,17 +19,10 @@
   transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
-.accordion.active {
-  display: flex;
-  max-height: 200%;
-  overflow-y: auto;
-  overflow-x: hidden;
-  align-items: center;
-  .accordion-content {
-    opacity: 1;
-    transform: translateY(0);
-    pointer-events: auto;
-  }
+.accordion.active .accordion-content {
+  opacity: 1;
+  transform: translateY(0);
+  pointer-events: auto;
 }
   
   .accordion {
@@ -53,9 +46,9 @@
       background-color: #d38e8e;
       font-size: 1.4rem;
       text-align: center;
-      // &:hover {
-      //   // box-shadow: 0 4px 20px #d38e8e;
-      // }
+      &:hover {
+        box-shadow: 0 4px 20px #d38e8e;
+      }
     }
   
     .accordion-content {
@@ -79,9 +72,9 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100vw;  /* grid width + gap compensation */
+      width: 95vw;  /* grid width + gap compensation */
       height: calc(100% + 20px);     /* grid height + gap compensation */
-      padding: 1.5em 0 1.5em 0;
+      padding: 1.5em;
       background-color: #d1ecc6;
 
       .accordion-title {
@@ -91,13 +84,9 @@
       }
 
      .accordion-content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        z-index: 10;
-  
+        display: block;
         z-index: 10;          /* above other grid items */
-        // box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+        box-shadow: 0 4px 20px rgba(0,0,0,0.3);
         border-radius: 0;     /* optional full expansion */
       }
     }
@@ -133,7 +122,7 @@
       padding: 10px;
     }
     .accordion.active {
-      width: 100vw;
+      width: 85vw;
       .accordion-title {
         padding: 0;
       }
