--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@ body {
     padding: 0;
     display: grid;
     grid-template-rows: 34vh 66vh;
+    overflow: hidden;
   }
 
   body {
